refactor: Jakarta Servlet Cleanup
Use this link to re-run the recipe: https://app.moderne.io/recipes/builder/gau6x2US0

Co-authored-by: Moderne <team@moderne.io>